# rust-rocket-diesel-docker

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yml
migrations/2022-02-03-083955_create_todos/: up.sql
src/: db.rs  errors.rs  lib.rs  main.rs  routes.rs
src/db/: todo.rs
src/models/: todo.rs
src/routes/: todo.rs
src/schema/: todo.rs
