[package]
authors = ["Jihoon Song <jihoonsong.dev@gmail.com>"]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [
    "diesel_postgres_pool",
] }
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
